
374) Killed shell_noargs option, it cannot work since the command needs to
     be set before sudoers is parsed.

375) Fixed the following Defaults options: set_home, fqdn, syslog, tty_tickets,
     ticket_dir, insults.

376) When using select() in tgetpass(), do a separate select before
     each read to be sure we can timeout correctly.

377) SecurID support compiles and works again.

378) Fixed a bug parsing runas modifiers.  If a user spec contained multiple
     runas specs, the latter ones may not be applied.

379) #uid now works in a RunasAlias

380) Don't ask the user for a password if the user is not allowed to run
     the command and the authenticate flag (in sudoers) is false.

381) Added configure check for initgroups(3).

382) Use our own fnmatch() if there is no fnmatch.h, even if there is an
     fnmatch() in libc.

Sudo 1.6.1 released.

383) Better behavior for -l and -v flags in conjunction with NOPASSWD and
     added "verifypw" and "listpw" options.

384) For HP-UX with cc, add the -Aa flag along with -D_HPUX_SOURCE.

385) Fix compilation with K&R compilers.

386) For netgroup host matching, match against the short version of the
     hostname as well as the long one if they are different.

387) Terminate passwd reading on '\r' in addition to '\n'

388) Visudo used to loop endlessly if a user entered ^D at the whatnow
     prompt.  EOF is now treaded as 'x' (exit w/o saving changes).

389) The 'shell_noargs' runtime option is back based on a patch from
     bguillory@email.com.

390) Systems that return RLIM_INFINITY for RLIMIT_NOFILE (like AIX)
     would loop for a very loing time during sudo startup.  A value of
     RLIM_INFINITY is now ignored (getdtablesize/sysconf is used instead).

391) Locking in visudo was broken.  We now lock the sudoers file, not the
     sudoers temp file, which should be safe.

392) PAM fixups: custom prompts now work correctly and errors are
     dealt with more sanely.  Patches from Cloyce D. Spradling.